fixed small things on mobile

--- a/source/assets/styles/core/_base.scss
+++ b/source/assets/styles/core/_base.scss
@@ -157,8 +157,13 @@ main {
 }
 
 .columns--two {
-  column-count: 2;
-  column-gap: 8%;
+  @include media(xsmall-up) {
+    column-count: 0;
+  }
+  @include media(medium-up) {
+    column-count: 2;
+    column-gap: 8%;
+  }
 }
 
 .list--top-border {
@@ -166,6 +171,16 @@ main {
     border-top: 7px solid $primary-link-color;
     padding-top: 1.5em;
     margin-bottom: 4em;
+  }
+}
+
+p {
+  a {
+    border-bottom: 1px solid lighten($base-color, 30%);
+    transition: all 0.4s ease 0s;
+    &:hover {
+      border-bottom: 1px solid $primary-link-color;
+    }
   }
 }
 
